--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "cake-watch",
+  "name": "sake-watch",
   "version": "0.0.5",
-  "description": "Adds file watching-related tasks to your Cakefile.",
+  "description": "Adds file watching-related tasks to your sakefile.",
   "main": "lib/",
   "directories": {
     "test": "test"
   },
   "dependencies": {},
   "devDependencies": {
-    "cake-build": "0.0.3",
-    "cake-publish": "^0.1.1",
-    "cake-version": "^0.1.3",
+    "sake-build": "0.0.3",
+    "sake-publish": "^0.1.1",
+    "sake-version": "^0.1.3",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "co-mocha": "^1.1.2",
     "coffee-script": "^1.10.0",
     "mocha": "^2.3.4",
     "postmortem": "^0.2.3",
-    "shortcake": "^1.1.11"
+    "shortsake": "^1.1.11"
   },
   "scripts": {
-    "test": "cake test",
-    "prepublish": "cake build"
+    "test": "sake test",
+    "prepublish": "sake build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zeekay/cake-watch.git"
+    "url": "git+https://github.com/sakejs/sake-watch.git"
   },
   "keywords": [],
-  "author": "Zach Kelling <zk@monoid.io> (http://zeekay.io)",
+  "author": "Hanzo, Inc <hi@hanzo.io",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zeekay/cake-watch/issues"
+    "url": "https://github.com/sakejs/sake-watch/issues"
   },
-  "homepage": "https://github.com/zeekay/cake-watch#readme"
+  "homepage": "https://github.com/sakejs/sake-watch#readme"
 }
