--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "url": "git+https://github.com/sakejs/sake-watch.git"
   },
   "keywords": [],
-  "author": "Hanzo, Inc <hi@hanzo.io",
-  "license": "MIT",
+  "author": "Hanzo, Inc. <hi@hanzo.io",
+  "license": "BSD",
   "bugs": {
     "url": "https://github.com/sakejs/sake-watch/issues"
   },
