--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "name": "sake-watch",
   "version": "0.0.5",
-  "description": "Adds file watching-related tasks to your sakefile.",
-  "main": "lib/",
-  "directories": {
-    "test": "test"
-  },
+  "description": "Add file watching-related tasks to your Sakefile",
+  "main": "lib/sake-watch.js",
+  "module": "lib/sake-watch.mjs",
+  "files": [
+    "lib",
+    "src"
+  ],
   "dependencies": {},
   "devDependencies": {
+    "coffee-script": "1.10.0",
     "sake-build": "0.0.3",
-    "sake-publish": "^0.1.1",
-    "sake-version": "^0.1.3",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
-    "co-mocha": "^1.1.2",
-    "coffee-script": "^1.10.0",
-    "mocha": "^2.3.4",
-    "postmortem": "^0.2.3",
-    "shortsake": "^1.1.11"
+    "sake-outdated": "0.1.20",
+    "sake-publish": "0.1.1",
+    "sake-version": "0.1.3"
   },
   "scripts": {
     "test": "sake test",
-    "prepublish": "sake build"
+    "pretest": "sake build",
+    "build": "sake build",
+    "prepublishOnly": "sake build"
   },
   "repository": {
     "type": "git",
@@ -29,7 +28,7 @@
   },
   "keywords": [],
   "author": "Hanzo, Inc. <hi@hanzo.io",
-  "license": "BSD",
+  "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/sakejs/sake-watch/issues"
   },
