--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "devDependencies": {
     "coffee-script": "1.10.0",
     "sake-build": "0.0.3",
+    "sake-bundle": "0.4.11",
     "sake-outdated": "0.1.20",
-    "sake-publish": "0.1.1",
-    "sake-version": "0.1.3"
+    "sake-publish": "0.1.12",
+    "sake-test": "0.1.4",
+    "sake-version": "0.1.18"
   },
   "scripts": {
     "test": "sake test",
