--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {},
   "devDependencies": {
     "coffee-script": "1.12.5",
-    "sake-build": "0.0.3",
     "sake-bundle": "0.4.11",
+    "sake-cli": "0.3.2",
+    "sake-core": "1.3.7",
     "sake-outdated": "0.1.20",
     "sake-publish": "0.1.12",
     "sake-test": "0.1.4",
