--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "lib",
     "src"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "coffee-script": "1.12.6",
-    "sake-bundle": "0.5.3",
-    "sake-cli": "0.5.11",
-    "sake-core": "1.4.10",
-    "sake-outdated": "0.1.27",
-    "sake-publish": "0.1.16",
-    "sake-test": "0.1.5",
-    "sake-version": "0.1.19"
+    "coffeescript": "^1.12.6",
+    "sake-bundle": "^0.5.3",
+    "sake-cli": "^0.5.11",
+    "sake-core": "^1.4.10",
+    "sake-outdated": "^0.1.27",
+    "sake-publish": "^0.1.16",
+    "sake-test": "^0.1.5",
+    "sake-version": "^0.1.19"
   },
   "scripts": {
     "test": "sake test",
